--- a/style.css
+++ b/style.css
@@ -9,6 +9,44 @@
     height: 50px;
 }
 
+h1, h4 {
+    text-align: center;
+}
+
+p {
+    text-align: center;
+}
+
+.guess_btn{
+    width: 35px;
+    height: 25px;
+    transform: translateY(33%);
+}
+
+.reset_btn{
+    width: 35px;
+    height: 25px;
+    transform: translate(-15%, 33%);
+}
+
+#guess_num {
+    border-radius: 20%;
+}
+
+#guess_btn {
+    width: 35px;
+    height: 25px;
+    transform: translateY(33%);
+}
+
+
+
+#reset_btn {
+    width: 35px;
+    height: 25px;
+    transform: translateY(33%);
+}
+
 .para_container {
     box-sizing: border-box;
     position: relative;
