--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@
     height: 25px;
 }
 
+#answer img {
+    width: 200px;
+    height: 200px;
+}
+
 #lives img {
     width: 50px;
     height: 50px;
