--- a/style.css
+++ b/style.css
@@ -4,14 +4,23 @@
 
 }
 
+.game_area_container {
+    transform: translateY(-15%);
+}
+
 #response img {
     width: 100px;
     height: 25px;
 }
 
-#answer img {
-    width: 200px;
-    height: 200px;
+#game_winning {
+    display: none;
+    transform: translateX(150%);
+}
+
+#game_over {
+    display: none;
+    transform: translateX(250%);
 }
 
 #lives img {
